SUBDIRS = adt dagaal dagdsm dagema

include_HEADERS = \
	dag37t_api.h \
	d37t_i2c.h \
	dagapi.h \
	cat_interface.h \
	dagclarg.h \
	dagcrc.h \
	daginf.h \
	dagnew.h \
	dagpbm.h \
	dagpci.h \
	dagreg.h \
	dagtoken.h \
	dagutil.h \
	dag_platform.h \
	dag_platform_linux.h \
	dag_platform_freebsd.h \
	dag_platform_solaris.h \
	dag_platform_win32.h \
	dag_platform_macosx.h \
	dag_config_api.h \
	dag_config.h \
	dag_config_util.h \
	dag_component_codes.h \
	dag_attribute_codes.h \
	dag_component.h \
	dagdsm.h \
	dagema.h \
	dagixp_filter.h \
	dagswid.h \
	dagerf.h \
	dag_protocol_decode.h \
	dag_romutil.h \
	dagsarapi.h \
	dag_ima.h \
	infiniband_protocol_headers.h \
	dagimg.h

nobase_include_HEADERS = \
	adt/adt_adler32.h \
	adt/adt_array.h \
	adt/adt_array_list.h \
	adt/adt_array_stack.h \
	adt/adt_comparison.h \
	adt/adt_config.h \
	adt/adt_debugging.h \
	adt/adt_disposal.h \
	adt/adt_dynamic_list.h \
	adt/adt_hash_common.h \
	adt/adt_hash.h \
	adt/adt_iterate.h \
	adt/adt_linear_hash_table.h \
	adt/adt_list_common.h \
	adt/adt_list.h \
	adt/adt_magic_numbers.h \
	adt/adt_memory.h \
	adt/adt_memory_pool.h \
	adt/adt_quadratic_hash_table.h \
	adt/adt_string.h \
	adt/adt_types.h

noinst_HEADERS = \
	dag_aal_connections.h \
	dagc.h \
	dagmapper.h \
	dagname.h \
	dag_platform_netbsd.h \
	dagsarscan.h \
	dag_smbus.h \
	dagcam/idt75k_interf.h \
	dagcam/idt75k_lib.h \
	dagcam/infiniband_proto.h \
	dagcam/idt52k_lib.h \
	dagcam/unified_filter_interface.h \
	dagcam/bfs_lib.h
