noinst_HEADERS = 

#	adt_adler32.h \
#	adt_array.h \
#	adt_array_list.h \
#	adt_array_stack.h \
#	adt_comparison.h \
#	adt_config.h \
#	adt_debugging.h \
#	adt_disposal.h \
#	adt_dynamic_list.h \
#	adt_hash_common.h \
#	adt_hash.h \
#	adt_iterate.h \
#	adt_linear_hash_table.h \
#	adt_list_common.h \
#	adt_list.h \
#	adt_magic_numbers.h \
#	adt_memory.h \
#	adt_memory_pool.h \
#	adt_quadratic_hash_table.h \
#	adt_string.h \
#	adt_types.h
