noinst_HEADERS = \
	amcc3485_component.h \
	card_info_component.h \
	counters_interface_component.h \
	dag37d_port_component.h \
	dag37t_connection_component.h \
	dag38s_port_component.h \
	dag43s_port_component.h \
	dag62se_port_component.h \
	dag71s_channelized_demapper_component.h \
	dag71s_channelized_mapper_component.h \
	dag71s_concatenated_demapper_component.h \
	dag71s_concatenated_mapper_component.h \
	dag71s_connection_component.h \
	dag71s_e1t1_component.h \
	dag71s_erfmux_component.h \
	dag37t_mux_component.h \
	dag71s_phy_component.h \
	dag71s_port_component.h \
	drop_component.h \
	duck_component.h \
	dpa_component.h \
	general_component.h \
	gpp_component.h \
	hlb_component.h \
	led_controller_component.h \
	lm63.h \
	lm93.h \
	mini_mac.h \
	mini_mac_statistics_component.h \
	oc48_deframer_component.h \
	optics_component.h \
	pbm_component.h \
	pc_component.h \
	sac_component.h \
	sc256.h \
	sonet_pp_component.h \
	sonic_component.h \
	sr_gpp.h \
	steering_component.h \
	steering_ipf_component.h \
	stream_component.h \
	terf_component.h \
	tr_terf_component.h \
	vsc8476_port_component.h \
	vsc8486_port_component.h \
	vsc8479_port_component.h \
	xfp_component.h \
	xge_pcs_component.h \
	xgmii_component.h \
	xgmii_statistics_component.h \
	cat_component.h \
	hlb_new_component.h \
	counter_component.h \
	framer_component.h \
	vsc3312.h \
	lm_sensor_component.h \
	stream_feature_component.h \
	memtx_component.h \
	ipf_component.h \
	infiniband_classifier.h \
	gtp_phy_component.h \
	dsm_component.h \
	sonet_channel_mgmt_component.h \
	sonet_connection_component.h \
	bfs_component.h \
	pattern_match_component.h \
        irigb_component.h

# Add header files which need to be installed as public (interface headers)
#include_HEADERS = 
